
The orc-style build tree layout seems to be working.
----------------------------------------------------------------------
Sun Mar 14 10:40:58 2004                        Michael Jennings (mej)

Remove build-temporary files after build is done.

Fixed obscure regexp-quoting bug.
----------------------------------------------------------------------
Wed Mar 24 14:48:55 2004                        Michael Jennings (mej)

Improved perl spec file template.

Added support for keywords that are *not* packages in dependency
statements.

Use version and release in package key so we can build multiple SRPM's
of the same package.

Added update capability to perlpkg.

Moved templating code into an OO perl module.

Added ability to package only and ignore build deps in perlpkg.

Fixed missing '/' characters in buildtool.
----------------------------------------------------------------------
Wed Mar 24 21:58:13 2004                        Michael Jennings (mej)

Added specgen, a very basic specfile generator.  It will get more
powerful as time progresses.
----------------------------------------------------------------------
Thu Mar 25 11:10:42 2004                        Michael Jennings (mej)

Minor touchups for 1.7-0.2.
----------------------------------------------------------------------
Fri Mar 26 16:26:04 2004                        Michael Jennings (mej)

Made temp space creation more generic.  This needs to be used for all
temp space creation ASAP.

Centralized some common initialization code.

Added 2 new spec templates, make and imake.

Added specgen to installed scripts.

specgen now has automatic detection of:
 - %setup macro parameters
 - documentation files
 - package license
----------------------------------------------------------------------
Tue Mar 30 18:56:35 2004                        Michael Jennings (mej)

Fixes for older systems.
----------------------------------------------------------------------